# autoresearch-lab

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEX_GUARDRAILS.md  README.md  SHOWCASE.md  pyproject.toml
.github/workflows/: ci.yml
campaigns/base_2k/: README.md
campaigns/long_4k/: README.md  campaign.json
campaigns/stories_2k/: README.md
docs/: AGENT_MAX_CAPABILITY_ARCHITECTURE.md  AGENT_SESSION_CONTRACT.md  KARPATHY_SHARPNESS_EXECUTION_PLAN.md  OPERATING_CONTRACT.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  RESEARCH_CONTRACT.md  SECURITY.md  runbook.md
lab/: artifacts.py  cleanup.py  cli.py  code_proposals.py  doctor.py  idea_signatures.py  night.py  paths.py  preflight.py  proposals.py  replay.py  resume.py  scoring.py  semantics.py  settings.py  smoke_assets.py
reference_impl/: archive_policy.py  backend_selector.py  config_fingerprint.py  offline_packing.py  promotion_policy.py  report_recommendations.py  scheduler_policy.py
schemas/: agent_scheduler_policy.schema.json  artifact_index.schema.json  campaign.schema.json  experiment_record.schema.json  memory_record.schema.json  proposal.schema.json  quality_score.schema.json  retrieval_event.schema.json  run_manifest.schema.json  validation_review.schema.json
sql/: 001_ledger.sql  002_validation_reviews.sql  003_memory_evidence.sql  004_scheduler_semantics.sql  005_agent_sessions.sql
templates/: campaign.base_2k.json  campaign.stories_2k.json  nightly_runbook.template.md  quality_score.template.json
tools/: parity_harness.py  spec_lint.py  ten_of_ten_signoff.py  verify_showcase_bundle.py
(+214 files in other folders)
