[project]
name = "autoresearch-lab"
version = "0.1.0"
description = "Single-GPU CUDA-first dense-model research lab with campaigns, validation, evidence-traced memory, autotune, and showcase automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "numpy>=2.2.6",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "triton-windows==3.5.1.post22; platform_system == 'Windows'",
]

[project.scripts]
arlab = "lab.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA-capable NVIDIA GPU",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lab*", "research*"]
exclude = [
    "artifacts*",
    "campaigns*",
    "docs*",
    "schemas*",
    "showcase*",
    "sql*",
    "templates*",
    "tests*",
]
namespaces = true
